# Machine-Learning-Basic

./: README.md
1_Python_basic/: 1_VariablesAndOperators.ipynb  6_numpy_pandas_matplotlib.ipynb
3_Gadient_Descent/: Gradient _Descent.ipynb
4_Linear_regression/: Linear_Regression.py  README.md
4_Linear_regression/self_study/: 1_fish_market_linear_regression.ipynb  2_house_linear_regression.ipynb
5_Binary_Classification/1_PLA/: Perceptron_Learning_Algorithm.ipynb
5_Binary_Classification/1_PLA/self_study/: 1_PLA.ipynb  2_PLA.ipynb
5_Binary_Classification/2_Logistic_regresion/: Logistic_Regression.ipynb
5_Binary_Classification/2_Logistic_regresion/self_study/: 1_Logistic_regression.ipynb  2_Logistic_regression.ipynb
5_Binary_Classification/3_Softmax_regression/: Softmax_classifier.ipynb
6_SVM_and_MLP/: 3_Neural_Network.ipynb
6_SVM_and_MLP/1_SVM/: 1.Support_Vector_Machine_and_Softmax.ipynb  2_Non-Maximum_Suppression_for_Object_Detection.ipynb
6_SVM_and_MLP/1_SVM/self_study/: SVM.ipynb
6_SVM_and_MLP/2_MLP/: Multi_Layer_Perceptron.ipynb
6_SVM_and_MLP/4_Backpropagation/: Lan-truyền-ngược-backpropagation.pptx  README.md
7_Overfitting_and_Underfitting/: README.md
8_Feature_Engineering/: Feature Engineering.ipynb  README.md
9.1_Quy_trinh_giai_mot_bai_toan_ML/: README.md
9.4_Doc pager/: README.md
c_10_Tien_xu_ly_du_lieu/: Handling Categorical data.ipynb  Handling Numerical Data.ipynb
c_11_Van_dung/: README.md
c_13_Computer_Vision/1_Pytorch_basic/: 1_tensor.ipynb  2_model.ipynb  3_model2.ipynb  image_classfication.ipynb
c_13_Computer_Vision/2_Classification/EfficientNets_Motorcycle_and_Bicycle/output/: history_b1.csv
c_13_Computer_Vision/2_Classification/EfficientNets_Motorcycle_and_Bicycle/src/: plot_result.py  test.py  utils.py
c_13_Computer_Vision/3.C++/Bytetrack/: CMakeLists.txt
c_13_Computer_Vision/3.C++/Bytetrack/src/: BYTETracker.cpp  STrack.cpp  bytetrack.cpp
c_13_Computer_Vision/3.C++/example_project_AI_android_CPP/jni/: Application.mk
c_13_Computer_Vision/3.C++/example_project_AI_android_CPP/jni/src/AiCore/: AiTypeData.hpp  ObjectDetector.cpp
c_13_Computer_Vision/3.C++/example_project_AI_android_CPP/jni/src/AiMajor/: Litter.hpp  PeopleCounter.cpp
c_13_Computer_Vision/3.C++/pedestrian_tracker_demo/cpp/: CMakeLists.txt  main.cpp
c_13_Computer_Vision/3.C++/pedestrian_tracker_demo/cpp/Data/person-detection-retail-0002/FP16/: person-detection-retail-0002.xml
c_13_Computer_Vision/3.C++/pedestrian_tracker_demo/cpp/Data/person-detection-retail-0002/FP16-INT8/: person-detection-retail-0002.xml
c_13_Computer_Vision/3.C++/pedestrian_tracker_demo/cpp/Data/person-detection-retail-0013/FP16-INT8/: person-detection-retail-0013.xml
c_13_Computer_Vision/3.C++/pedestrian_tracker_demo/cpp/Data/person-reidentification-retail-0286/FP32/: person-reidentification-retail-0286.xml
c_13_Computer_Vision/3.C++/pedestrian_tracker_demo/cpp/Data/person-reidentification-retail-0287/FP16-INT8/: person-reidentification-retail-0287.xml
c_13_Computer_Vision/3.C++/pedestrian_tracker_demo/cpp/Data/person-reidentification-retail-0287/FP32/: person-reidentification-retail-0287.xml
c_13_Computer_Vision/3.C++/pedestrian_tracker_demo/cpp/Data/person-reidentification-retail-0288/FP32/: person-reidentification-retail-0288.xml
c_13_Computer_Vision/3.C++/pedestrian_tracker_demo/cpp/Libs/inference_engine/lib/intel64/: hddl_perfcheck  myriad_compile  myriad_perfcheck
c_13_Computer_Vision/3.C++/pedestrian_tracker_demo/cpp/Libs/ngraph/lib/: libprotobuf.so.3.7.1.0
c_13_Computer_Vision/3.C++/pedestrian_tracker_demo/cpp/Libs/opencv/include/opencv2/: cvconfig.h
c_13_Computer_Vision/3.C++/pedestrian_tracker_demo/cpp/Libs/opencv/lib/: libopencv_features2d.so.4.5.3  libopencv_flann.so.4.5.3  libopencv_imgcodecs.so.4.5.3  libopencv_photo.so.4.5.3
c_13_Computer_Vision/3.C++/pedestrian_tracker_demo/cpp/Libs/utils/include/utils/: common.hpp
c_13_Computer_Vision/3.C++/pedestrian_tracker_demo/cpp/src/: detector.cpp  tracker.cpp
c_13_Computer_Vision/3.C++/yolov4-tiny/data/models/: AnprDetect.txt
c_13_Computer_Vision/3.C++/yolov4-tiny/include/: Hungarian.hpp  struct.hpp
c_13_Computer_Vision/3.C++/yolov4-tiny/src/: main.cpp  yolov4_tiny.cpp
c_13_Computer_Vision/3.C++/yolov8_ByteTrack_TensorRT/: .gitignore  CMakeLists.txt  check_trt.py  main.cpp  result.txt  tool_check_file.py
c_13_Computer_Vision/3.C++/yolov8_ByteTrack_TensorRT/include/: yolov8.hpp
c_13_Computer_Vision/3.C++/yolov8_ByteTrack_TensorRT/model_yolov8n/train14/: args.yaml  results.csv
c_13_Computer_Vision/C++/Bytetrack/: README.md
c_13_Computer_Vision/C++/Bytetrack/data/models/: yolox_s.param
c_13_Computer_Vision/C++/Bytetrack/include/: BYTETracker.h  STrack.h  dataType.h  struct.hpp  yolov4_tiny.hpp
c_13_Computer_Vision/C++/Bytetrack/src/: utils.cpp  yolov4_tiny.cpp
c_13_Computer_Vision/C++/example_project_AI_android_CPP/jni/: Android.mk
c_13_Computer_Vision/C++/yolov4-tiny/: CMakeLists.txt
c_13_Computer_Vision/C++/yolov4-tiny/data/models/: yolov4-tiny-opt.param
c_13_Computer_Vision/C++/yolov4-tiny/include/: KalmanTracker.hpp  yolov4_tiny.hpp
c_13_Computer_Vision/C++/yolov4-tiny/src/: KalmanTracker.cpp
c_13_Computer_Vision/Classification/EfficientNets_Motorcycle_and_Bicycle/: README.md
c_13_Computer_Vision/Classification/EfficientNets_Motorcycle_and_Bicycle/src/: a.ipynb  app.py  loader.py  main.py  plot_result.py
c_13_Computer_Vision/Classification/EfficientNets_Motorcycle_and_Bicycle/src/models/: EfficientNets.py  layers.py
c_13_Computer_Vision/Graph/: .gitignone  test.ipynb
c_13_Computer_Vision/Graph/src/: Pose_estimation.py  process_image.py
c_13_Computer_Vision/Graph/src/CNN/: process_image.py
c_13_Computer_Vision/Graph/src/GCN/: Graph.py  data.csv  data.json  detect.py  detect_cam.py  example.html  layers.py  main.py  models.py  pose_hands.py  process_image.py  test.ipynb  train_gcn.py  trainer.py  utils.py
(+81 files in other folders)
